Updated App.js and App.css for new UI design

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-mongodb+srv://<admin>:<9553049120Lahari>@cluster0.7l4eu.mongodb.net/Taskify?retryWrites=true&w=majority&appName=Cluster0
+mongodb+srv://<admin>:<9553049120Lahari>@cluster0.7l4eu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
