--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "1.7.9",,
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.4"
+    "mongoose": "^8.9.4",
+    "react": "^18.2.0",
+    "react-dom": "19.0.0",
+    "react-router-dom": "7.1.1",
+    "react-scripts": "5.0.1",
+    "web-vitals": "4.2.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
